force-app/main/default/objects/RW_Juvlon_Campaign__c/RW_Juvlon_Campaign__c.object-meta.xml
<CustomObject>
    <label>Juvlon Campaign</label>
    <nameField>
        <displayFormat>Juvlon-{00000}</displayFormat>
        <label>Juvlon Campaign</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Juvlon Campaign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>