force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>RW_Approved_By__c</fullName>
    <label>Approved by</label>
    <length>25</length>
    <type>Text</type>
</CustomField>