force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>