force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_from_date__c.field-meta.xml
<CustomField>
    <fullName>RW_from_date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>