force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Juvlon_Object__c.field-meta.xml
<CustomField>
    <fullName>RW_Juvlon_Object__c</fullName>
    <label>Juvlon Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <label>Opportunity(VDNB)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>