force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Juvlon_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Juvlon_Status__c</fullName>
    <label>Juvlon Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>