force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_ListId__c.field-meta.xml
<CustomField>
    <fullName>RW_ListId__c</fullName>
    <label>ListId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>