force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Report_Id__c</fullName>
    <label>Salesforce Report Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>