force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_Request_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RW_Request_Remarks__c</fullName>
    <label>Request Remarks</label>
    <length>25</length>
    <type>Text</type>
</CustomField>