force-app/main/default/objects/RW_Juvlon_Campaign__c/fields/RW_to_date__c.field-meta.xml
<CustomField>
    <fullName>RW_to_date__c</fullName>
    <label>To-Date</label>
    <type>Date</type>
</CustomField>